--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,11 +1,11 @@
 {
-  "short_name": "React App",
+  "short_name": "Leaderboard",
   "name": "Freecodecamp leaderboard",
   "icons": [
     {
       "src": "favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "type": "image/"
     }
   ],
   "start_url": "./index.html",
