--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://bao88.github.io/buildacamperleaderboard/",
   "name": "buildacamperleaderboard",
   "version": "0.1.0",
   "private": true,
